@@ -22,6 +22,7 @@ production.
   ImageMagick.
 * Introduced $wgQueryPageDefaultLimit (defaults to 50) for the number of
   items to show by default on query pages (special pages such as Whatlinkshere).
+* (bug 32470) Increase the length of ug_group
 
 === New features in 1.19 ===
 * (bug 19838) Possibility to get all interwiki prefixes if the interwiki
@@ -141,7 +142,7 @@ production.
 * (bug 32168) Add wfAssembleUrl for use in wfExpandUrl
 * (bug 32168) fixed - wfExpandUrl expands dot segments now
 * (bug 31535) Upload comments now truncated properly, and don't have brackets
-* (bug 32450) Scripts pages in MediaWiki: namespace parse [[Category:#]] links 
+* (bug 32450) Scripts pages in MediaWiki: namespace parse [[Category:#]] links
 * (bug 32086) Special:PermanentLink now show an error message when no subpage
   was specified.
 
